docs: change structure
Add new folders: nir, diploma and practice

--- a/docs/diploma/00-title.tex
+++ b/docs/diploma/00-title.tex
@@ -61,7 +61,7 @@
 		\vspace{\baselineskip}
 
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Нормоконтролер & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{Ю. В. Строганов} \hfill} \\
+			Нормоконтролер & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill  \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 	\end{table}
