--- a/docs/diploma/10-analysis.tex
+++ b/docs/diploma/10-analysis.tex
@@ -87,6 +87,70 @@
 
 Благодаря тому, что алгоритмическая сложность доступа к элементам словаря константа, алгоритмы сжатия с использованием словаря приводят данные к исходному виду быстрее, чем алгоритмы с использованием подходов, которые были описаны выше \cite{lossless-compression}.
 
+\subsection{Информационная энтропия}
+
+Информационная энтропия -- мера неупорядоченности или неопределенности состояния некоторой системы, описываемой данными. Вычисляется по формуле Шеннона (\ref{eq:shannon_entropy}):
+
+\begin{equation}\label{eq:shannon_entropy}
+	H(x) = -K\sum^n_{i=1}p(x_{i})log_2{p(x_{i})},
+\end{equation}
+где $p(x_{i})$ -- вероятность $i$-го состояния системы (значения принимаемого переменной), $n$ -- число состояний системы (значений, принимаемых переменной), $K$ -- положительная константа. Эта величина также называется средней энтропией сообщения. 
+
+Величина, представленная на формуле \ref{eq:shannon_entropy_2}, называется частной энтропией и характеризует только $i$-e состояние системы.
+
+\begin{equation}\label{eq:shannon_entropy_2}
+	H(x) = -log_{2}{(p_{i})}.
+\end{equation}
+
+Функция \ref{eq:shannon_entropy} -- единственная функция, которая удовлетворяет ряду требований, необходимые для измерения энтропии:
+
+\begin{enumerate}
+	\item $H(p_{1},...,p_{n})$ определена и непрерывна для всех $p1,...,p_{n}$, где $p_{i} \in [0, 1]$ для всех $i=1,...,n$ и $p_{1}+...+p_{n} = 1$. Таким образом, функция зависит только от распределения вероятностей, но не от алфавита;
+	\item для целых положительных $n$, должно выполняться неравенство \ref{eq:shannon_entropy_eq_1}:
+	
+	\begin{equation}\label{eq:shannon_entropy_eq_1}
+		H(\frac{1}{n},...,\frac{1}{n}) < H(\frac{1}{n + 1},...,\frac{1}{n + 1});
+	\end{equation}
+	
+	\item для целых положительных $b_{i}$, где $b_{1} + ... + b_{k} = n$, должно выполняться равенство \ref{eq:shannon_entropy_eq_2}:
+	
+	\begin{equation}\label{eq:shannon_entropy_eq_2}
+		H(\frac{1}{n},...,\frac{1}{n}) = H(\frac{b_{1}}{n},...,\frac{b_{k}}{n}) + \sum^k_{i = 1}\frac{b_{i}}{n}H(\frac{1}{b_{i}},...,\frac{1}{b_{i}})
+	\end{equation}
+\end{enumerate}
+
+Энтропия измеряется в битах, натах, тритах или хартли, в зависимости от основания логарифма, использующегося при вычислении энтропии. Логарифм используется в связи с тем, что он аддитивен для независимых источников. Так, например, энтропия события -- броска монеты, равна 1 биту (формула \ref{eq:moneta}), а энтропия $k$ бросков составит $k$ бит. 
+
+\begin{equation}\label{eq:moneta}
+	H(x) = -2(\frac{1}{2}log_{2}{\frac{1}{2}}) = -log_{2}{\frac{1}{2}}=log_{2}{2} = 1.
+\end{equation}
+
+В обычном представлении $log_{2}n$ бит требуется для представления переменной, принимающей $n$ значений, если $n$ является степенью 2. Если значения равновероятны, то энтропия в битах будет равна значению $n$.
+
+\subsubsection{Бинарная энтропия}
+
+Бинарная энтропия -- частный случай информационной энтропии, различие составляет лишь в том, что $x$ (формула \ref{eq:shannon_entropy_2}) может принимать только два значения: 0 или 1. Определяется как энтропия процесса Бернулли \cite{bernoulli-process} с вероятностью $p$ одного одного из двух значений. Рассчитывается по формуле Хартли (\ref{eq:binary_entropy}):
+
+\begin{equation}\label{eq:binary_entropy}
+	i = log_{2}{N},
+\end{equation}
+где $N$ -- мощность алфавита, $i$ -- количество информации в каждом символе сообщения. Для случайно величины $x$, принимающей $n$ независимых случайных значений $x_{i}$ с вероятностями $p_{i}(i = 1,...,n)$ формула Хартли переходи в формулу Шеннона (\ref{eq:shannon_entropy}).
+
+На рисунке \ref{fig:binary_entropy} представлена функция бинарной энтропии.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=1]{img/entropy.pdf}
+	\caption{Функция бинарной энтропии}
+	\label{fig:binary_entropy}
+\end{figure}
+
+\subsubsection{Энтропия и сжатие данных}
+
+Энтропия набора данных является мерой количества содержащейся в нем информации \cite{entropy-paper}. Информационная энтропия, подсчитанная для данных, размер которых известен, можно использовать чтобы получить теоретическую границу того, насколько эти данные могут быть сжаты \cite{entropy-paper}. Таким образом, рассчитав энтропию для некоторых данных, можно предсказать их примерный размер после проведения преобразования сжатия.
+
+Для вычисления энтропии набора данных, в среднем, требуется в несколько раз меньше машинного времени, чем для сжатия этого набора данных \cite{entropy-paper}. Этот факт можно использовать для ускорения процесса сжатия, если алгоритм сжатия вызывается повторно. Например если данные, которые нужно сжать, разбиты на участки, что может быть актуально при параллельной обработке данных. Можно считать энтропию для каждого такого участка, и на основе полученного значения принимать решение, сжимать этот участок или хранить в несжатом виде. В таком случае, время сжатия увеличиться, но при этом итоговый коэффициент сжатия данных будет уменьшен. Можно сделать вывод, что чем больше таких участков и чем больше энтропия сжимаемых участков, тем больше будет выигрыш во времени и меньше проигрыш в сжатии данных.
+
 \subsection{Ядра операционных систем}
 
 Ядро операционной системы -- это программное обеспечение, которое предоставляет базовый функционал для всех остальных частей операционной системы, управляет аппаратным обеспечением и распределяет системные ресурсы \cite{kernel-development}. Ядра операционных систем можно разделить на две группы: с монолитным или с микроядром.
@@ -264,8 +328,7 @@
 
 Неудачная попытка записать блок в подсистему блочного вывода приводит к большим накладным расходам \cite{in-kernel-memory-compression}. По этой причине, при сохранении страницы памяти со степенью сжатия $k < 1$, zram сохраняет исходную страницу памяти (не сжатую) в ОЗУ, что в конечном итоге не приводит к экономии места.
 
-Модуль в ядре zram описывается с помощью структуры \texttt{struct zram} (листинг \ref{code:zram}).
-
+В ядре модуль описывается с помощью структуры \texttt{struct zram} (листинг \ref{code:zram}).
 \begin{code}
 	\captionof{listing}{Структура \texttt{struct zram}}
 	\label{code:zram}
@@ -344,10 +407,6 @@ zram устраняет дубликаты страниц, которые сос
 	{text}
 	{code/struct_block_device.c}
 \end{code}
-
-\subsubsection{Схема работы}
-
-\subsubsection{Структуры данных}
 
 \subsection{Вывод}
 
