--- a/docs/diploma/60-bibliography.tex
+++ b/docs/diploma/60-bibliography.tex
@@ -38,6 +38,9 @@
 	\bibitem{lossless-compression}
 	Industrial Control Technology. Peng Zhang, 2008. с. 675 - 774.
 	
+	\bibitem{entropy-paper}
+	IEEE TRANSACTIONS ON COMPUTER-AIDED DESIGN OF INTEGRATED CIRCUITS AND SYSTEMS, VOL. 26, NO. 2, FEBRUARY 2007, Relationship Between Entropy and Test Data Compression. Kedarnath J. Balakrishnan. с. 386.
+	
 	\bibitem{kernel-development}
 	Ядро Linux. Описание процесса разработки. Третье издание, 2019. Роберт Лав. с. 25 - 36.
 	
@@ -82,8 +85,9 @@
 	
 	\bibitem{rfc}
 	PatchTipsAndTricks - Linux Kernel Newbies  [Электронный ресурс]. – Режим доступа: https://kernelnewbies.org/PatchTipsAndTricks, свободный – (27.04.2022)
-	https://kernelnewbies.org/PatchTipsAndTricks
 	
+	\bibitem{bernoulli-process}
+	Bernoulli Process - an overview | ScienceDirect Topics [Электронный ресурс]. – Режим доступа: https://www.sciencedirect.com/topics/mathematics/bernoulli-process, свободный – (27.04.2022)
 \end{thebibliography}
 \endgroup
 
