--- a/docs/practice/30-technology.tex
+++ b/docs/practice/30-technology.tex
@@ -1,4 +1,4 @@
-\section{Технологическая часть}
+\section{Программная реализация оптимизации метода сжатия страниц оперативной памяти в ядре Linux}
 
 В данном разделе описываются средства разработки программного обеспечения и требования к нему. Приводится структура разрабо­танного ПО.
 
@@ -93,13 +93,16 @@
 Функция shannon\_entropy в качестве единственного входного параметра получает указатель на массив байт размером PAGE\_SIZE. Возвращает информационную энтропию, подсчитанную по формуле \ref{eq:shannon_entropy}, для данного набора байт.
 
 \begin{equation}\label{eq:shannon_entropy}
-	H(x) = -\sum^{n}_{i = 1} = p_{i} log_{2} p_{i},
+	H(x) = -K\sum^n_{i=1}p(x_{i})log_2{p(x_{i})},
 \end{equation}
-где $p_{i}$ -- количество байтов размером $i$ в рассматриваемом массиве.
+
+где $p(x_{i})$ -- вероятность $i$-го состояния системы (значения принимаемого переменной), $n$ -- число состояний системы (значений, принимаемых переменной), $K$ -- положительная константа.
 
 Для вычисления логарифма используется встроенная функция ядра ilog2. В ядре Linux нет поддержки чисел с плавающей запятой, поэтому функция ilog2 работает только с целыми числами. Передаваемый параметр в функцию ilog2 ($p_{i}$) возводится в 4 степень для увлечения точности вычислений.
 
-Пример реализации функции shannon\_entropy() для модуля zram представлен в листинге \ref{code:shannon_entropy}
+Пример реализации функции shannon\_entropy() для модуля zram представлен в листинге \ref{code:shannon_entropy}. 
+
+\newpage
 
 \begin{code}
 	\captionof{listing}{Функция shannon\_entropy()}
@@ -125,7 +128,9 @@
 
 Перед вызовом zcomp\_compress() для каждой попавшей в эту функцию страницы считается информационная энтропия. Если вычисленное значение выше порогового значения CONFIG\_ZRAM\_ENTROPY\_THRESHOLD, объявленного с помощью директивы \#define, то эта страница помечается как несжимаемая в памяти. В обратном случае, происходит вызов zcomp\_compress() и данные, находящиеся на этой странице памяти, сжимаются. 
 
-Пример реализации модификации функции \_\_zram\_bvec\_write() модуля zram представлен в листинге \ref{code:call_shannon_entropy}.
+Пример реализации модификации функции \_\_zram\_bvec\_write() модуля zram представлен в листинге \ref{code:call_shannon_entropy}. 
+
+\newpage
 
 \begin{code}
 	\captionof{listing}{Функция \_\_zram\_bvec\_write()}
